#113_#127_#105_#102_#152-Post-Route-Winddaten-Get-Route-für-BBIP-Swagger-doku-und-Unit-Tests
